kubernetes/main/apps/media/maintainerr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: maintainerr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: maintainerr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: maintainerr
            io.kubernetes.pod.namespace: media
  egress:
    # plex
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP

    # overseerr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

    # radarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP

    # sonarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
